--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-star-rating": "^1.4.2",
     "react-star-rating-component": "^1.4.1",
     "react-star-ratings": "^2.3.0"
   },
