--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "dependencies": {
     "antd": "^3.11.0",
+    "axios": "^0.18.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-star-rating": "^1.4.2",
     "react-star-rating-component": "^1.4.1",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "superagent": "^4.0.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
